k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: client-cluster-ip-service # the same as in client-cluster-ip-service.yaml
              servicePort: 3000 # as in port of the file above
          - path: /api/?(.*)
            backend:
              serviceName: server-cluster-ip-service # see the name in server-cluster-ip-service.yaml
              servicePort: 5000 # the same as above but for port value
